--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,4 @@ project(matrix_mul C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(matrix_mul main.c
-        floating_point.c)
+add_executable(matrix_mul main.c floating_point.c floating_point.h)
