Task 2: fixed point and Unit tests for fixed point functions. Mean squared error and maximum absolute error (printed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(matrix_mul C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(matrix_mul main.c floating_point.c floating_point.h)
+add_executable(matrix_mul main.c floating_point.c floating_point.h fixed_point.h
+        fixed_point.c)
